--- a/mesto/src/blocks/popup/__close/_type/popup__close_type_popup-delete.css
+++ b/mesto/src/blocks/popup/__close/_type/popup__close_type_popup-delete.css
@@ -1,10 +1,10 @@
-.popup__close_type_trash {
+.popup__close_type_popup-delete {
   top: -40px;
   right: -40px;
 }
 
 @media (max-width: 600px) {
-  .popup__close_type_trash {
+  .popup__close_type_popup-delete {
     top: -20px;
     right: -20px;
   }
