--- a/mesto/src/blocks/profile/__avatar/profile__avatar.css
+++ b/mesto/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,7 @@
 .profile__avatar {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+	background-position: center;
+  background-repeat: no-repeat;
+	background-size: cover;
 }
