--- a/mesto/src/blocks/cards/__img/cards__img.css
+++ b/mesto/src/blocks/cards/__img/cards__img.css
@@ -2,7 +2,8 @@
   margin: 0;
   width: 282px;
   height: 282px;
-  -o-object-fit: cover;
-     object-fit: cover;
+	background-position: center;
+  background-repeat: no-repeat;
+	background-size: cover;
   z-index: 1;
 }
